First version: with virtual thrreads and structured concurrency